# beerproto-python

./: LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
beerproto/v1/: beer_pb2.py  beer_pb2.pyi  boil_pb2.py  boil_pb2.pyi  boil_step_pb2.py  boil_step_pb2.pyi  culture_pb2.py  culture_pb2.pyi  equipment_pb2.py  equipment_pb2.pyi  fermentable_pb2.py  fermentable_pb2.pyi  fermentation_pb2.py  fermentation_pb2.pyi  fermentation_step_pb2.py  fermentation_step_pb2.pyi  hop_pb2.py  hop_pb2.pyi  mash_pb2.py  mash_pb2.pyi  mash_step_pb2.py  mash_step_pb2.pyi  measureable_units_pb2.py  measureable_units_pb2.pyi  misc_pb2.py  misc_pb2.pyi  packaging_graphic_pb2.py  packaging_graphic_pb2.pyi  packaging_pb2.py  packaging_pb2.pyi  packaging_vessel_pb2.py  packaging_vessel_pb2.pyi  recipe_pb2.py  recipe_pb2.pyi  srm_pb2.py  srm_pb2.pyi  style_pb2.py  style_pb2.pyi  timing_pb2.py  timing_pb2.pyi  (+2 more)
buf/validate/: validate_pb2.py
