[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beerproto"
version = "1.0.0"
description = "Python protobuf bindings for the BeerProto schema"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "protobuf>=5.26",
    "protovalidate>=0.3",
]

[project.urls]
Homepage = "https://github.com/beerproto/beerproto-python"
Source = "https://github.com/beerproto/beerproto-python"

[tool.setuptools.packages.find]
include = ["beerproto*"]

[tool.setuptools.package-data]
"beerproto.v1" = ["*.pyi"]
