[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beerproto"
version = "1.4.0"
description = "Python protobuf bindings for the BeerProto schema"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "protobuf>=5.26",
]

# Runtime validation of protovalidate constraints is optional. The vendored
# buf.validate types are only message descriptors; installing protovalidate
# lets you call protovalidate.validate(). Its version must match the
# buf.validate schema vendored here (from beerproto's buf.lock).
[project.optional-dependencies]
validation = ["protovalidate"]

[project.urls]
Homepage = "https://github.com/beerproto/beerproto-python"
Source = "https://github.com/beerproto/beerproto-python"

[tool.setuptools.packages.find]
include = ["beerproto*", "buf*"]

[tool.setuptools.package-data]
"beerproto.v1" = ["*.pyi"]
"buf.validate" = ["*.pyi"]
